# serverless_hands_on_doc

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/custom/: devcontainer-feature.json  install.sh
.github/workflows/: ci.yml
appendix/SUMMARY/: index.html
appendix/further/: index.html
appendix/skillup/: index.html
contents/: index.html
contents/SUMMARY/: index.html
contents/api_gateway/: index.html
contents/api_gateway/SUMMARY/: index.html
contents/api_gateway/work/: index.html
contents/deploy/SUMMARY/: index.html
contents/deploy/cdk/: index.html
contents/deploy/cloudformation/: index.html
contents/deploy/introduction/: index.html
contents/deploy/work/: index.html
contents/dynamodb/: index.html
contents/dynamodb/SUMMARY/: index.html
contents/dynamodb/design_example/: index.html
contents/dynamodb/design_work/: index.html
contents/dynamodb/implementation_example/: index.html
contents/dynamodb/implementation_work/: index.html
contents/lambda/: index.html
contents/lambda/SUMMARY/: index.html
contents/lambda/python/: index.html
contents/lambda/work/: index.html
contents/preparation/: index.html
contents/serverless/: index.html
docs/: index.md  memo.md
docs/appendix/: SUMMARY.md  further.md
docs/contents/: SUMMARY.md  build_dev_env.md  index.md  preparation.md  serverless.md  task.md
docs/contents/api_gateway/: SUMMARY.md  index.md
docs/contents/appendix/: further.md
docs/contents/deploy/: SUMMARY.md
memo/: index.html
search/: search_index.json
(+8 files in other folders)
