[project]
name = "document_hands_on"
version = "0.1.0"
description = "Document for serverless hands-on"
dependencies = [
    "mkdocs",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "pymdown-extensions",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = ["mypy", "ruff"]

[tool.rye.scripts]
doc = "mkdocs serve"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls

    # for formatter
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
